<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:orientation="vertical"    android:layout_width="fill_parent"    android:layout_height="fill_parent">        <ScrollView android:id="@+id/settingsScrollView"				android:layout_width="fill_parent" 				android:layout_height="wrap_content"				android:layout_weight="1">						<LinearLayout			android:orientation="vertical" 			android:layout_width="fill_parent"			android:layout_height="fill_parent">						<!-- LinearLayout			  android:layout_width="fill_parent"			  android:layout_height="80dip"			  android:orientation="horizontal"			  android:layout_gravity="center" >				<ImageView					android:src="@drawable/dc_logo"					android:layout_height="60dip"					android:layout_width="80dip"					android:layout_centerInParent="true" 					android:layout_gravity="center"/>				  <TextView				    android:gravity="center_vertical"				    android:layout_gravity="center_vertical"				    android:layout_width="fill_parent"				    android:layout_height="fill_parent"				    android:textSize="30dp"				    android:textStyle="bold"				    android:text="@string/main_menu_message" />			</LinearLayout -->							<RelativeLayout	    android:layout_width="fill_parent"	    android:layout_height="100dip"	    android:paddingTop="10dip"	    android:paddingBottom="20dip">						<ImageView			      android:id="@+id/icon"						      android:layout_height="80dip"				  android:layout_width="100dip"						      android:layout_alignParentTop="true"			      android:layout_alignParentBottom="true"			      android:layout_marginRight="6dip"						      android:src="@drawable/dc_logo"			      android:contentDescription="@string/main_logo_alt" />			  <TextView			      android:id="@+id/secondLine"						      android:layout_width="wrap_content"			      android:layout_height="20dip"						      android:layout_toRightOf="@id/icon"			      android:layout_alignParentBottom="true"			      android:layout_alignParentRight="true"			      android:text="@string/main_menu_message" />						  <TextView			      android:id="@+id/firstLine"						      android:layout_width="wrap_content"			      android:layout_height="wrap_content"						      android:layout_toRightOf="@id/icon"			      android:layout_alignParentRight="true"			      android:layout_alignParentTop="true"			      android:layout_above="@id/secondLine"			      android:layout_alignWithParentIfMissing="true"			      android:gravity="center_vertical"			      android:text="@string/app_name"			      android:textSize="30dp"				  android:textStyle="bold" />					</RelativeLayout>					<Button android:id="@+id/take_quiz_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/main_take_quiz_btn_text"             android:textSize="20dp"            android:textStyle="bold"             android:layout_margin="5dp"            />		    <Button android:id="@+id/results_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/results_btn_text"             android:textSize="20dp"            android:textStyle="bold"            android:layout_margin="5dp"             />                <Button android:id="@+id/submit_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/submit_btn_text"             android:textSize="20dp"            android:textStyle="bold"            android:layout_margin="5dp"             />                <Button android:id="@+id/manage_quiz_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/main_manage_btn_text"             android:textSize="20dp"            android:textStyle="bold"            android:layout_margin="5dp" />                <TextView android:layout_width="fill_parent"				android:layout_height="wrap_content" 				android:gravity="left"				android:textSize="20sp" 				android:id="@+id/main_unregistered"				android:text="@string/main_unregistered" />					<TextView android:layout_width="fill_parent"				android:layout_height="wrap_content" 				android:gravity="left"				android:textSize="20sp" 				android:id="@+id/main_email_title"				android:text="@string/main_email_title" />		<EditText android:layout_width="fill_parent"				android:layout_height="wrap_content" 				android:gravity="left"				android:textSize="20sp" 				android:id="@+id/main_email_field"				android:inputType="text"/>					<TextView android:layout_width="fill_parent"				android:layout_height="wrap_content" 				android:gravity="left"				android:textSize="20sp" 				android:id="@+id/main_password_title"				android:text="@string/main_password_title" />		<EditText android:layout_width="fill_parent"				android:layout_height="wrap_content" 				android:gravity="left"				android:textSize="20sp" 				android:id="@+id/main_password_field"				android:inputType="textPassword"/>					<Button android:id="@+id/login_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/main_login_btn_text"             android:textSize="20dp"            android:textStyle="bold"            android:layout_margin="5dp" />	            					    <Button android:id="@+id/register_btn"            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:text="@string/main_register_btn_text"             android:textSize="20dp"            android:textStyle="bold"            android:layout_margin="5dp" />    </LinearLayout>    </ScrollView></LinearLayout>