<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ScrollView android:id="@+id/settingsScrollView"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="80dip"
	  android:orientation="horizontal"
	  android:layout_gravity="center" >
		<ImageView
			android:src="@drawable/dc_logo"
			android:layout_height="60dip"
			android:layout_width="80dip"
			android:layout_centerInParent="true" 
			android:layout_gravity="center"/>
		  <TextView
		    android:gravity="center_vertical"
		    android:layout_gravity="center_vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:textSize="30dp"
		    android:textStyle="bold"
		    android:text="@string/app_name" />
	</LinearLayout>
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center"
		android:textSize="20sp"
		android:layout_margin="10dp" 
		android:text="@string/about"/>
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center"
		android:textSize="15sp"
		android:layout_margin="10dp" 
		android:text="@string/version"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
